--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#spring.session.store-type=redis
+#spring.cache.type=redis
+#spring.redis.cluster.nodes=172.17.0.1:7000,172.17.0.1:7001,172.17.0.1:7002
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=testmongodb
